# umpire

./: .gitignore  CMakeLists.txt  MODULE.bazel  Makefile  PKGBUILD  README.md  WORKSPACE.bazel  bazel-bin  bazel-out  bazel-testlogs  bazel-umpire  flake.nix  flake.nix.save  proxy_content.nix  result  test.sh  vcpkg.json
.github/workflows/: bazel.yml  build-arch.yml  build-bazel.yml  build-nix.yml  build.yml
asset/: install.sh
docs/: development.md  install.md  installation.md  roadmap.md  run.md
src/: BUILD.bazel  error.hpp  main.cpp
src/components/: cache.hpp  compareFunc.hpp  compile.hpp  error.h  error.hpp  finalVerdict.hpp  getList.hpp  help.h  help.hpp  judge.hpp  runtest.hpp  util.h  util.hpp  verdictTable.hpp
src/global/: allheader.hpp  var.hpp
test/: test-all.sh  test.sh
test/ac/: main.cpp  program  um
test/ca/: um
test/demo/: main.cpp
test/demo/testcase/: 1-2.out  a.out  udontur.out
test/go/: main.go
test/go/testcase/: umpire.in  umpire.out
test/java/: main.java
test/javascript/: main.js
test/rte/: program
test/rust/: main.rs
test/tle/: main.cpp  program  um
